<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:backgroundTint="@color/colorPrimary"
    tools:context="com.example.fake9.tendee.StartActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="Welcome to Tendee"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/start_reg_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:text="@string/need_a_new_account"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/start_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:backgroundTint="@color/colorAccent"
        android:text="ALREADY HAVE ACCOUNT"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/tendee_profile" />

</RelativeLayout>
