...

    <TextView
        android:id="@+id/settings_address"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/settings_email"
        android:layout_alignTop="@+id/settings_edit_address"
        android:text="Address"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/settings_edit_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/settings_description"
        android:layout_alignStart="@+id/settings_edit_address"
        android:drawableStart="@drawable/ic_mode_edit_white_18dp" />

...
